[package]
name = "celery-rs"
version = "0.1.0"
authors = ["Andrew Evans <asevans48@gmail.com>"]
edition = "2018"

[dependencies]
redis = "0.12.0"
amiquip = "0.3.2"
serde_json = "1.0.40"
num_cpus = "1.10.1"
crossbeam = "0.7.2"
amq-protocol = "1.4.0"
uuid = {version = "0.8.1", features = ["serde", "v4"]}